--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -42,7 +42,7 @@
             <div class="card-body">
               <h5 class="card-title">MAIN COURSE</h5>
               <p class="card-text">CHAPATI WITH MEALS</p>
-              <a href="#" class="btn btn-primary">BOOK LUNCH</a>
+              <a  class="btn btn-primary" (click)="bookTodaylunch()">BOOK LUNCH</a>
             </div>
             <div class="card-footer text-muted">
            
